# CStar

./: .aiderignore  .cursorrules  .editorconfig  .env.local  .gitignore  .mcp.json  AGENTS.md  AGENTS.qmd  ANNEXATION_PLAN.qmd  ARCHITECTURE.md  BASE_BASELINE_REPORT.qmd  CAMPAIGN_N1000.md  CLAUDE.md  CLAUDE.qmd  CLAUDE_AUDIT_CSTAR.md  CSTAR_EXTENSION_MIGRATION.md  Dockerfile.hunter  Dockerfile.sentinel  GEMINI.md  GEMINI.qmd  LEVEL_5_DIAGNOSTIC_FINDINGS.json  LEVEL_5_DIAGNOSTIC_REPORT.md  LEVEL_5_RESTORATION_PLAN.md  MIGRATION_STATUS.qmd  MOONSHOT.md  OS_INTEGRATION_PLAN.md  README.md  README.qmd  README_SOVEREIGN_FISH.md  README_SOVEREIGN_FISH.qmd  REMEDIATION_REPORT.qmd  SECURITY.md  SECURITY.qmd  SOVEREIGNFISH_LEDGER.md  SOVEREIGNFISH_LEDGER.qmd  SovereignFish.md  THE_PACT.qmd  TRIPLE_THREAT.md  _quarto.yml  analyze_failures.py  (+151 more)
.agent/: ALFRED_SUGGESTIONS.md  CAMPAIGN_IMPLEMENTATION_PLAN.md  CAMPAIGN_IMPLEMENTATION_PLAN.qmd  CAMPAIGN_THE_BRAIN.qmd  GEMINI.qmd  SovereignFish.md  SovereignFish.qmd  TRACE_REPORT.md  TRACE_REPORT.qmd  brave_quota.json  cachebro.json  config.json  corrections.json  daemon.key  eslint.json  memory.md  memory.qmd  oracle_inbox.json  oracle_outbox.json  perimeter_report.json  promotion_registry.json  sovereign_state.json  tech_debt_ledger.json  warden.pkl
.agents/: AGENTS.feature  CAMPAIGN_IMPLEMENTATION_PLAN.qmd  CAMPAIGN_THE_BRAIN.qmd  CAMPAIGN_THE_STERLING_MANDATE.qmd  GEMINI.qmd  SovereignFish.qmd  brave_quota.json  cachebro.json  config.json  cstar-error.txt  daemon.key  feedback.jsonl  ledger.json  memory.qmd  oracle_inbox.json  oracle_outbox.json  perimeter_report.json  scan_heartbeat.json  skill_registry.json  sovereign_state.json  sprt_ledger.json  tech_debt_ledger.json  warden.pkl
.claude-plugin/: marketplace.json  plugin.json
.corvus_quarantine/: 20260206_111810_AGENTS.qmd  20260206_183943_AGENTS.qmd
.gemini/: GEMINI.md
.github/: cstar-local-validation-receipt.md  pull_request_template.md
.stats/: -agent-ALFRED_SUGGESTIONS-md.qmd  -agent-CAMPAIGN_IMPLEMENTATION_PLAN-qmd.qmd  -agent-CAMPAIGN_THE_BRAIN-qmd.qmd  -agent-CAMPAIGN_THE_STERLING_MANDATE-qmd.qmd  -agent-GEMINI-qmd.qmd  -agent-SovereignFish-qmd.qmd  -agent-TRACE_REPORT-qmd.qmd  -agent-forge_staged-THE_DREAM-md.qmd  -agent-forge_staged-evolve-md.qmd  -agent-forge_staged-ouroboros-py.qmd  -agent-forge_staged-vector-py.qmd  -agent-lore-SOVEREIGN_LOOP-qmd.qmd  -agent-lore-SYNAPTIC_NEXUS-qmd.qmd  -agent-lore-THE_GRAND_NEURON-qmd.qmd  -agent-lore-THE_IMPERIAL_TREASURY-qmd.qmd  -agent-lore-THE_SOVEREIGN_SIMULATION-qmd.qmd  -agent-scripts-empire-compiler-py.qmd  -agent-scripts-empire-factories-py.qmd  -agent-scripts-empire-semantic_probe-py.qmd  -agent-scripts-empire-stabilizer-py.qmd  -agent-scripts-empire-symbolic_legend-py.qmd  -agent-skills-_template-py.qmd  -agent-skills-agent-lightning-SKILL-qmd.qmd  (+2354 more)
docs/: HANDOFF.md  (+16 more)
(+3262 files in other folders)
