[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corvus-star"
version = "0.1.0"
description = "Sovereign AI Framework"
readme = "README.md"
authors = [
    { name = "Craig", email = "craig@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "playwright",
    "pytest",
    "ruff",
    "vulture",
    "psutil",
    "python-dotenv",
    "PyYAML",
    "textual",
    "pytest-asyncio",
    "google-genai",
    "google-generativeai",
    "colorama",
    "radon",
    "chromadb",
    "mcp",
    "pytest-xdist",
    "keyring"
]

[project.scripts]
cstar = "src.core.cstar_dispatcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/empire_tests", "tests/crucible"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "node_modules",
    "dist",
    "bin",
    ".agents",
    "scripts",
    "tests",
    "tmp_diag",
    "mock_project",
    "sterileAgent",
    ".corvus_quarantine",
    "skills_db"
]

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP"
]
ignore = [
    "E402", "E701", "E702", "E501", "B025", "E741", "F401", "E722"
]

[tool.ruff.lint.per-file-ignores]
"src/core/engine/vector.py" = ["F401"]
